sidebar added to main

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,9 @@
     background-color: #FFFFEE;
     color: #eb6424 ;
 }
+
+#sidebar {
+    background-image: url(./images/youradd.png) ;
+    background-position: center;
+    background-size: contain;
+}
