--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,20 @@
     color: #eb6424 ;
 }
 
+@media screen and (min-width: 1024px) {
+    .navbar-end {
+        margin-left: 0 !important;
+    }
+
+}
+
+@media screen and (max-width: 1024px) {
+    .navbar, .navbar-end, .navbar-menu, .navbar-start {
+        display: flex !important;
+    }
+
+}
+
 #sidebar {
     background-image: url(./images/youradd.png) ;
     background-position: center;
