--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 
 @media screen and (min-width: 1024px) {
     .navbar-end {
-        margin-left: 0 !important;
+        margin-left: .25 !important;
     }
 
 }
