--- a/assets/style.css
+++ b/assets/style.css
@@ -3,22 +3,28 @@
     color: #eb6424 ;
 }
 
-@media screen and (min-width: 1024px) {
+#sidebar {
+    background-image: url(./images/youradd.png) ;
+    background-position: center;
+    background-size: contain;
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
     .navbar-end {
         margin-left: .25 !important;
     }
 
+   #navbar-links
+
 }
 
-@media screen and (max-width: 1024px) {
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
     .navbar, .navbar-end, .navbar-menu, .navbar-start {
         display: flex !important;
     }
 
 }
 
-#sidebar {
-    background-image: url(./images/youradd.png) ;
-    background-position: center;
-    background-size: contain;
-}
+
